test/scc/expr/semantic-errors/107.a
107.t:8:5: error: too many arguments in function call